--- a/.github/workflows/sync-to-readthedocs-repo.yaml
+++ b/.github/workflows/sync-to-readthedocs-repo.yaml
@@ -6,7 +6,7 @@ on:
     branches:
       - main
       - latest
-      - repo_merge_no_history
+      - pre/2.6
   workflow_dispatch:
     inputs:
       env:
@@ -42,7 +42,7 @@ jobs:
         run: |
           case ${{ env.ENV }} in
             dev)
-            echo "::set-output name=branch::repo_merge_no_history"
+            echo "::set-output name=branch::pre/2.6"
             ;;
             prod)
             echo "::set-output name=branch::main"
