--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,21 +62,21 @@ gdstk = {version="*", optional = true}
 
 # jax
 jaxlib = [
-    {version = ">=0.4.1,<=0.4.14", platform = "linux",  source="jaxsource", optional = true},
-    {version = ">=0.4.1,<=0.4.14", platform = "darwin",  source="jaxsource", optional = true},
-    {version = ">=0.4.13,<=0.4.14", platform = "win32", source="jaxsource", optional = true}
+    {version = "^0.4.1", platform = "linux",  source="jaxsource", optional = true},
+    {version = "^0.4.1", platform = "darwin",  source="jaxsource", optional = true},
+    {version = "^0.4.13", platform = "win32", source="jaxsource", optional = true}
 ]
 
 jax = [
-    {version = ">=0.4.1,<=0.4.14", extras = ["cpu"], platform = "linux", source="jaxsource", optional = true},
-    {version = ">=0.4.1,<=0.4.14", extras = ["cpu"], platform = "darwin",  source="jaxsource", optional = true},
-    {version = ">=0.4.13,<=0.4.14", extras = ["cpu"], platform = "win32", source="jaxsource", optional = true}
+    {version = "^0.4.1", extras = ["cpu"], platform = "linux", source="jaxsource", optional = true},
+    {version = "^0.4.1", extras = ["cpu"], platform = "darwin",  source="jaxsource", optional = true},
+    {version = "^0.4.13", extras = ["cpu"], platform = "win32", source="jaxsource", optional = true}
 ]
 
 
 # trimesh
 trimesh = {version = "3.20.0", optional = true}
-networkx = {version = ">=2.6.3, <=3.0", optional = true}
+networkx = {version = "^2.6.3", optional = true}
 rtree = {version = "1.0.1", optional = true}
 
 # docs
@@ -99,9 +99,10 @@ optax = {version="*", optional = true}
 signac = {version="*", optional = true}
 sax = {version="*", optional = true}
 vtk = {version="<=9.2.6", optional = true}
+pyswarms = {version="*", optional = true}
 
 [tool.poetry.extras]
-dev = ["pre-commit", "black", "ruff", "tox", "pytest", "pytest-timeout", "memory_profiler", "dill", "ipython", "gdspy", "gdstk", "trimesh", "jax", "jaxlib", "networkx", "rtree", "jupyter", "jinja2", "nbconvert", "sphinx", "nbsphinx", "ipython", "divparams", "sphinx-copybutton", "sphinx-book-theme", "m2r2", "tmm", "gdstk", "grcwa", "sphinx-sitemap", "nbdime", "optax", "signac", "sax", "pylint", "jupyterblack", "pydata-sphinx-theme", "sphinx-tabs", "vtk"]
+dev = ["pre-commit", "black", "ruff", "tox", "pytest", "pytest-timeout", "memory_profiler", "dill", "ipython", "gdspy", "gdstk", "trimesh", "jax", "jaxlib", "networkx", "rtree", "jupyter", "jinja2", "nbconvert", "sphinx", "nbsphinx", "ipython", "divparams", "sphinx-copybutton", "sphinx-book-theme", "m2r2", "tmm", "gdstk", "grcwa", "sphinx-sitemap", "nbdime", "optax", "signac", "sax", "pylint", "jupyterblack", "pydata-sphinx-theme", "sphinx-tabs", "vtk", "pyswarms"]
 docs = ["jupyter", "jinja2", "nbconvert", "sphinx", "nbsphinx", "ipython", "divparams", "sphinx-copybutton", "sphinx-book-theme", "pydata-sphinx-theme", "m2r2", "tmm", "gdstk", "grcwa", "sphinx-sitemap", "nbdime", "optax", "signac", "sax", "pylint", "jupyterblack", "sphinx-tabs"]
 gdspy = ["gdspy"]
 gdstk = ["gdstk"]
@@ -152,7 +153,7 @@ ignore = [
   "E501",  # line too long, handled by black
   "B008",  # do not perform function calls in argument defaults
   "C901",  # too complex
-  "UP007", # use x | y instead of union[x,y] (doesnt work)
+  "UP007", # use x | y instead of union[x,y] (does not work)
   "B905",  # `zip()` without an explicit `strict=` parameter
   "C408",  # C408 Unnecessary `dict` call (rewrite as a literal)
   "B904",
