--- a/.github/workflows/sync-to-readthedocs-repo.yaml
+++ b/.github/workflows/sync-to-readthedocs-repo.yaml
@@ -6,7 +6,8 @@ on:
     branches:
       - main
       - latest
-      - repo_merge_no_history
+      - 'pre/*'
+      - dario/quick_patches_pre/2.6
   workflow_dispatch:
     inputs:
       env:
@@ -20,6 +21,10 @@ jobs:
       dest-branch: ${{ steps.dest-branch.outputs.branch }}
     runs-on: ubuntu-latest
     steps:
+      - name: Extract branch name
+        id: extract_branch
+        shell: bash
+        run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
       - id: setenv
         run: |
           if test -n "${{ github.event.inputs.env }}"
@@ -42,7 +47,7 @@ jobs:
         run: |
           case ${{ env.ENV }} in
             dev)
-            echo "::set-output name=branch::repo_merge_no_history"
+            echo "::set-output name=branch::{{ steps.extract_branch.outputs.branch }}"
             ;;
             prod)
             echo "::set-output name=branch::main" 
