--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -3,10 +3,10 @@ name: Tidy3dTests
 on:
   workflow_dispatch:
   push:
-    branches: [ development ]
+    branches: [ develop ]
   pull_request:
     branches:
-      - development
+      - develop
       - 'pre/*'
 
 jobs:
