--- a/.github/workflows/test_develop_cli.yaml
+++ b/.github/workflows/test_develop_cli.yaml
@@ -1,4 +1,4 @@
-name: test-develop-cli
+name: "test_develop_cli"
 
 on:
   workflow_dispatch:
@@ -6,7 +6,6 @@ on:
     workflows: [ "tidy3d-frontend-tests" ]
     types:
       - completed
-
 
 jobs:
   test-dev-commands:
