--- a/.github/workflows/test_daily_latest_submodule.yaml
+++ b/.github/workflows/test_daily_latest_submodule.yaml
@@ -21,20 +21,20 @@ jobs:
         run: |
           git submodule update --init --recursive
 
-      - name: Determine the latest pre/* branch
+      - name: Determine the latest pre/2.* branch
         id: get_latest_pre_branch
         run: |
           # Fetch all branches
           git fetch --all --quiet
-
-          # List branches matching the pre/* pattern
-          BRANCHES=$(git branch -r | grep 'origin/pre/' | sed 's|origin/||' | sort -V)
+      
+          # List branches matching the pre/2.* pattern
+          BRANCHES=$(git branch -r | grep 'origin/pre/2\.' | sed 's|origin/||' | sort -V)
           
           # Identify the latest branch
           LATEST_BRANCH=$(echo "$BRANCHES" | tail -n 1)
           
           echo "LATEST_BRANCH=$LATEST_BRANCH" >> $GITHUB_ENV
-          echo "Latest pre/* branch is: $LATEST_BRANCH"
+          echo "Latest pre/2.* branch is: $LATEST_BRANCH"
 
       - name: Check submodules for multiple branches
         shell: bash
