:arrow_up: Looser 2.0 numpy functionality

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ importlib-metadata = ">=6.0.0"
 h5netcdf = "1.0.2"
 h5py = "^3.0.0"
 rich = "^13.0"
-numpy = "<2"
+numpy = "*"
 matplotlib = "*"
 shapely = "^2.0"
 pandas = "<=2.2.1"
